--- a/CP4-Front-End-main/src/css/styles.css
+++ b/CP4-Front-End-main/src/css/styles.css
@@ -1,7 +1,3 @@
-body {
-    color: black;
-    background-color: rgb(250, 250, 250);
-}
 .gridcontainer {
     display: grid;
     grid-template-columns: 1fr 125fr;
@@ -31,4 +27,63 @@ body {
 
 #submit{
  align-content: center;
+}
+body{
+    background-color: var(--bg-color);
+}
+
+
+/*header*/
+header #logo-header{
+    width: 25%;
+}
+
+header nav{
+    background-color: var(--mid-color);
+}
+.navbar-nav .nav-item{
+    margin-right: 6rem;
+}
+
+.navbar-nav .nav-link{
+    white-space: nowrap; /*evitando quebra de linha*/
+}
+
+.efeitolink{
+    color: var(--green-light) !important;
+    font-weight: 400;
+    border-bottom: 3px solid transparent var(--green-light);    
+}
+
+.efeitolink:hover, .efeitolink.a{
+    border-bottom: 3px solid var(--green-light);
+    transition: all 0.1s ease;
+}
+/*rodape*/
+.rodape{
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--mid-color);
+}
+
+.rodape a{
+    color: var(--green-light);
+    transition: all 0.5s ease;
+}
+
+.rodape a:hover{
+    color: var(--dark-green);
+}
+
+.rodape h4{
+    color: var(--bg-color);
+}
+
+.rodape img{
+    margin-right: 10px;
+    width: 20px;
+}
+
+.c-left, .c-right{
+    margin-top: 10%;
 }
