Ajustando cards do grid de produtos na página de categoria para 3x3 no tamanho médio e grande

--- a/src/css/styles1.css
+++ b/src/css/styles1.css
@@ -4,6 +4,14 @@ body {
     color: #333;
   }
   
+  .card img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* .card-body {
+    padding: 1rem; /* Reduz o espaçamento interno do card
+} */
   .navbar {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
