--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,6 +85,7 @@ header #carrinho{
     display: flex;
     justify-content: space-around;
     background-color: var(--mid-color);
+    padding-top: px;
 }
 
 .rodape a{
