--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,6 +23,11 @@ body{
 
 
 /*header*/
+
+.navbar {
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
 header #logo-header{
     width: 5%;  /*Mudando tamanho da logo para a nova header*/
 }
@@ -130,3 +135,18 @@ header #carrinho{
     color: red;
     font-weight: bold;
   }
+
+/* Animação no card ao passar o cursor */
+#animacaocard:hover {
+    transform: scale(1.05);
+  }
+
+  .card {
+    border: none;
+    transition: transform 0.3s ease-in-out;
+}
+.card-body {
+    text-align: center;
+  }
+
+/* Fim animação */
