--- a/src/css/styles1.css
+++ b/src/css/styles1.css
@@ -41,6 +41,7 @@ body {
   .card {
     border: none;
     transition: transform 0.3s ease-in-out;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
   .card:hover {
@@ -94,9 +95,9 @@ body {
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
   }
   
-  .card {
+  /* .card {
     margin-bottom: 20px;
-  }
+  } */
   
   footer {
     background: #2e7d32;
